--- a/turu.html
+++ b/turu.html
@@ -3,6 +3,6 @@
     <title>Button with Pop-up Message</title>
   </head>
   <body>
-    <button onclick="alert('Hello, World!')">Click me</button>
+    <button onclick="alert('Gws eh hbd eh nanad eh itu yak lupa intinya itu ')">Click me</button>
   </body>
 </html>
